chore: remove terraform files from git tracking and add example tfvars

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -2,5 +2,5 @@ aws_region = "us-east-1"
 project_name = "tree-service"
 environment = "dev"
 db_username = "tree_service_admin"
-db_password = "your-secure-password"
+db_password = "CHANGE_ME_TO_A_SECURE_PASSWORD"
 db_name = "tree_db" 
