--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,65 @@
+# Terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+!terraform/terraform.tfvars.example
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraform.lock.hcl
+
+# Go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build output
+bin/
+dist/
+build/
+
+# Dependencies
+vendor/
+node_modules/
+
+# Test coverage
+coverage/
+.coverage
+htmlcov/
+
+# Docker
+.docker/
+docker-compose.override.yml
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
