--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_call:  # Allow this workflow to be called from other workflows
 
 jobs:
   test:
@@ -17,7 +18,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.21'
+        go-version: '1.22'  # Update to match deploy workflow
 
     - name: Install dependencies
       run: go mod download
