--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,11 +20,15 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: us-east-2
+  TF_WORKSPACE: default
+  TF_INPUT: false
+  TF_IN_AUTOMATION: true
 
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     defaults:
       run:
         working-directory: ./terraform
@@ -45,7 +49,7 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform init
+      run: terraform init -backend-config="bucket=tree-service-terraform-state" -backend-config="key=terraform.tfstate" -backend-config="region=us-east-2" -backend-config="dynamodb_table=tree-service-terraform-locks"
 
     - name: Terraform Validate
       id: validate
@@ -87,4 +91,24 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve 
+      id: apply
+      run: |
+        # Run apply with output capture
+        terraform apply -auto-approve -no-color 2>&1 | tee apply.log
+        
+        # Check the exit status
+        if [ ${PIPESTATUS[0]} -ne 0 ]; then
+          echo "::error::Terraform apply failed"
+          exit 1
+        fi
+        
+        # Check for common hang conditions
+        if grep -q "Error: Error acquiring the state lock" apply.log; then
+          echo "::error::State lock acquisition failed"
+          exit 1
+        fi
+        
+        if grep -q "Error: timeout" apply.log; then
+          echo "::error::Operation timed out"
+          exit 1
+        fi 
